# url-shortener

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/common/: mod.rs
src/common/functions/: mod.rs  url_shortening.rs
src/common/redis/: redis.rs
src/common/types/: app_state.rs  mod.rs  shortened_url_info.rs  url_shortening_request.rs
src/config/: cors.rs
src/handlers/: redirect.rs
src/routes/: config.rs  create_short_url.rs  mod.rs  redirect.rs
