[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.2.0"
redis = "0.23.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.5"
hex = "0.4.3"